# Github_profile_Reader

./: README.md  pyproject.toml
src/github_profile_professional_analyzer/: crew.py  main.py
src/github_profile_professional_analyzer/config/: agents.yaml  tasks.yaml
