[project]
name = "github_profile_professional_analyzer"
version = "0.1.0"
description = "github_profile_professional_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.14.4",
]

[project.scripts]
github_profile_professional_analyzer = "github_profile_professional_analyzer.main:run"
run_crew = "github_profile_professional_analyzer.main:run"
train = "github_profile_professional_analyzer.main:train"
replay = "github_profile_professional_analyzer.main:replay"
test = "github_profile_professional_analyzer.main:test"
run_with_trigger = "github_profile_professional_analyzer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
